--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60f79e">  <td>21/09/23 21:09:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_11_AirbnbValidation.close_browser()[pri:0, instance:testcases.TC_11_AirbnbValidation@2f217633]">&lt;&lt;close_browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>21/09/23 21:09:01</td>   <td>-11101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_11_AirbnbValidation.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_11_AirbnbValidation@2f217633]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>21/09/23 21:09:03</td>   <td>-9505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_11_AirbnbValidation.priceRangeFilter()[pri:0, instance:testcases.TC_11_AirbnbValidation@2f217633]">priceRangeFilter</td> 
+<tr bgcolor="60f79e">  <td>21/09/24 11:39:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_AddEmployee.add_Employee()[pri:0, instance:testcases.TC_01_AddEmployee@2f217633]">add_Employee</td> 
   <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>21/09/23 21:09:01</td>   <td>-11122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_11_AirbnbValidation.setup()[pri:0, instance:testcases.TC_11_AirbnbValidation@2f217633]">&gt;&gt;setup</td> 
+<tr bgcolor="60f79e">  <td>21/09/24 11:39:40</td>   <td>-2059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_AddEmployee.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_01_AddEmployee@2f217633]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/24 11:39:39</td>   <td>-3113</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_AddEmployee.setup()[pri:0, instance:testcases.TC_01_AddEmployee@2f217633]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
+<tr bgcolor="60f79e">  <td>21/09/24 11:40:09</td>   <td>26754</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_01_AddEmployee.tearDown()[pri:0, instance:testcases.TC_01_AddEmployee@2f217633]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
 </table>
