--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,13 +1,31 @@
 <h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
 <tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
-<tr><td>Airbnb website is loaded</td></tr>
+<tr><td>Orange HRM website is loaded</td></tr>
 <tr><td>Browser window is maximized</td></tr>
-<tr><td>Accepted the cookies</td></tr>
-<tr><td>Location is clicked </td></tr>
-<tr><td>I’m flexible button is clicked</td></tr>
-<tr><td>Search results are displayed</td></tr>
-<tr><td>Guests dropdown is clicked</td></tr>
-<tr><td>No of adults selected from filter : 2</td></tr>
-<tr><td>Saved selection</td></tr>
-<tr><td>Filters button is clicked</td></tr>
+<tr><td>Admin is entered as UserName in a text-box</td></tr>
+<tr><td>Admin@123 is entered as Password in a text-box</td></tr>
+<tr><td>Login button is clicked</td></tr>
+<tr><td>Home page is displayed</td></tr>
+<tr><td>Selected PIM from the available options</td></tr>
+<tr><td>Selected add employee option</td></tr>
+<tr><td>Add Employee modal exists </td></tr>
+<tr><td>Jinny is enered as first name in the text-box</td></tr>
+<tr><td>and is enered as middle name in the text-box</td></tr>
+<tr><td>Georgiais enered as  nalastme in the text-box</td></tr>
+<tr><td>Location dropdown button is clicked</td></tr>
+<tr><td>Number of locations available:28</td></tr>
+<tr><td>Next button is clicked</td></tr>
+<tr><td>Personal details page is displayed</td></tr>
+<tr><td>Entered data in other Id field</td></tr>
+<tr><td>Nationality drop-down is clicked</td></tr>
+<tr><td>Australian is selected as nationality of the employee</td></tr>
+<tr><td>Option under marital status are 4</td></tr>
+<tr><td>marital status drop-down is clicked</td></tr>
+<tr><td>Gender drop-down is clicked</td></tr>
+<tr><td>Gender is selcted as :Male</td></tr>
+<tr><td>Data entered in hobbies field</td></tr>
+<tr><td>Next button is clicked</td></tr>
+<tr><td>Employee details page is displayed</td></tr>
+<tr><td>Region drop-down is clicked</td></tr>
+<tr><td>Browser is closed</td></tr>
 </table>
