--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,45 +1,38 @@
-<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\AaradhyaVashisht\git\SeleniumLearning</td></tr>
+<h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
 <tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
-<tr><td>Orange HRM website is loaded</td></tr>
-<tr><td>Browser window is maximized</td></tr>
-<tr><td>Admin is entered as UserName in a text-box</td></tr>
-<tr><td>Admin@123 is entered as Password in a text-box</td></tr>
+<tr><td>Website is loaded</td></tr>
+<tr><td>Browser window maximized</td></tr>
 <tr><td>Login button is clicked</td></tr>
-<tr><td>Home page is displayed</td></tr>
-<tr><td>Selected PIM from the available options</td></tr>
-<tr><td>Selected add employee option</td></tr>
-<tr><td>Add Employee modal exists </td></tr>
-<tr><td>Jinny is enered as first name in the text-box</td></tr>
-<tr><td>and is enered as middle name in the text-box</td></tr>
-<tr><td>Georgiais enered as  nalastme in the text-box</td></tr>
-<tr><td>Location dropdown button is clicked</td></tr>
-<tr><td>Number of locations available:28</td></tr>
-<tr><td>Next button is clicked</td></tr>
-<tr><td>Personal details page is displayed</td></tr>
-<tr><td>Entered data in other Id field</td></tr>
-<tr><td>Nationality drop-down is clicked</td></tr>
-<tr><td>Australian is selected as nationality of the employee</td></tr>
-<tr><td>Option under marital status are 4</td></tr>
-<tr><td>marital status drop-down is clicked</td></tr>
-<tr><td>Gender drop-down is clicked</td></tr>
-<tr><td>Gender is selcted as :Male</td></tr>
-<tr><td>Data entered in hobbies field</td></tr>
-<tr><td>Next button is clicked</td></tr>
-<tr><td>Employee details page is displayed</td></tr>
-<tr><td>StaleElementReferenceException occured, retrying for same element...!!!</td></tr>
-<tr><td>Region drop-down is clicked</td></tr>
-<tr><td>Region-2 is selcted from the dropdown</td></tr>
-<tr><td>FTE drop-down is clicked</td></tr>
-<tr><td>0.5 is selected from the dropdown</td></tr>
-<tr><td>Temporary department drop-down is clicked</td></tr>
-<tr><td>Sub unit-3 is selected  from the dropdown</td></tr>
-<tr><td>Save button is clicked</td></tr>
-<tr><td>save buttonn is clicked</td></tr>
-<tr><td>Food selection radio button is clicked</td></tr>
-<tr><td>save button is clicked</td></tr>
-<tr><td>Emloyee list is seleced</td></tr>
-<tr><td>Jinny and Georgia is selected as employee full name</td></tr>
-<tr><td>Employee name entered in search tab</td></tr>
-<tr><td>Employee selected from the dropdown</td></tr>
+<tr><td>Email Id is entered</td></tr>
+<tr><td>Entered password</td></tr>
+<tr><td>clicked on Login button</td></tr>
+<tr><td>Successfully logged out of the browser</td></tr>
+<tr><td>Browser is closed</td></tr>
+<tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
+<tr><td>Website is loaded</td></tr>
+<tr><td>Browser window maximized</td></tr>
+<tr><td>Login button is clicked</td></tr>
+<tr><td>Email Id is entered</td></tr>
+<tr><td>Entered password</td></tr>
+<tr><td>clicked on Login button</td></tr>
+<tr><td>Successfully logged out of the browser</td></tr>
+<tr><td>Browser is closed</td></tr>
+<tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
+<tr><td>Website is loaded</td></tr>
+<tr><td>Browser window maximized</td></tr>
+<tr><td>Login button is clicked</td></tr>
+<tr><td>Email Id is entered</td></tr>
+<tr><td>Entered password</td></tr>
+<tr><td>clicked on Login button</td></tr>
+<tr><td>Successfully logged out of the browser</td></tr>
+<tr><td>Browser is closed</td></tr>
+<tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
+<tr><td>Website is loaded</td></tr>
+<tr><td>Browser window maximized</td></tr>
+<tr><td>Login button is clicked</td></tr>
+<tr><td>Email Id is entered</td></tr>
+<tr><td>Entered password</td></tr>
+<tr><td>clicked on Login button</td></tr>
+<tr><td>Successfully logged out of the browser</td></tr>
 <tr><td>Browser is closed</td></tr>
 </table>
