--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,30 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_06_DemoWebShop_Login.afterClass()[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_06_DemoWebShop_Login.afterClass()[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_06_DemoWebShop_Login.afterClass()[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_06_DemoWebShop_Login.afterClass()[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:33</td>   <td>-6874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06_DemoWebShop_Login.login_DemoWebShop_DataProvider(java.lang.String,java.lang.String)[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">login_DemoWebShop_DataProvider</td> 
-  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:33</td>   <td>-6874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06_DemoWebShop_Login.login_DemoWebShop_DataProvider(java.lang.String,java.lang.String)[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">login_DemoWebShop_DataProvider</td> 
-  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:33</td>   <td>-6874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06_DemoWebShop_Login.login_DemoWebShop_DataProvider(java.lang.String,java.lang.String)[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">login_DemoWebShop_DataProvider</td> 
-  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:33</td>   <td>-6874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06_DemoWebShop_Login.login_DemoWebShop_DataProvider(java.lang.String,java.lang.String)[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">login_DemoWebShop_DataProvider</td> 
-  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:30</td>   <td>-9925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_06_DemoWebShop_Login.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:30</td>   <td>-9925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_06_DemoWebShop_Login.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:30</td>   <td>-9925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_06_DemoWebShop_Login.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:08:30</td>   <td>-9925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_06_DemoWebShop_Login.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
-<tr bgcolor="8c9b9d">  <td>21/09/24 21:07:58</td>   <td>-42691</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_06_DemoWebShop_Login.setup()[pri:0, instance:testcases.TC_06_DemoWebShop_Login@2f217633]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1946988038</td>   <td></td> </tr>
+<tr bgcolor="8c9b9d">  <td>21/09/25 12:27:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC_11_AirbnbValidation.close_browser()[pri:0, instance:testcases.TC_11_AirbnbValidation@1da2cb77]">&lt;&lt;close_browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="8c9b9d">  <td>21/09/25 12:27:30</td>   <td>-13181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_11_AirbnbValidation.openBrowser(java.lang.String)[pri:0, instance:testcases.TC_11_AirbnbValidation@1da2cb77]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="8c9b9d">  <td>21/09/25 12:27:31</td>   <td>-11384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_11_AirbnbValidation.priceRangeFilter()[pri:0, instance:testcases.TC_11_AirbnbValidation@1da2cb77]">priceRangeFilter</td> 
+  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="8c9b9d">  <td>21/09/25 12:27:29</td>   <td>-13211</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_11_AirbnbValidation.setup()[pri:0, instance:testcases.TC_11_AirbnbValidation@1da2cb77]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
 </table>
