--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,38 +1,21 @@
 <h2>Reporter output</h2><table><tr><td>Path of the Project is :C:\Users\rehan\git\SeleniumLearning</td></tr>
 <tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
-<tr><td>Website is loaded</td></tr>
-<tr><td>Browser window maximized</td></tr>
-<tr><td>Login button is clicked</td></tr>
-<tr><td>Email Id is entered</td></tr>
-<tr><td>Entered password</td></tr>
-<tr><td>clicked on Login button</td></tr>
-<tr><td>Successfully logged out of the browser</td></tr>
-<tr><td>Browser is closed</td></tr>
-<tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
-<tr><td>Website is loaded</td></tr>
-<tr><td>Browser window maximized</td></tr>
-<tr><td>Login button is clicked</td></tr>
-<tr><td>Email Id is entered</td></tr>
-<tr><td>Entered password</td></tr>
-<tr><td>clicked on Login button</td></tr>
-<tr><td>Successfully logged out of the browser</td></tr>
-<tr><td>Browser is closed</td></tr>
-<tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
-<tr><td>Website is loaded</td></tr>
-<tr><td>Browser window maximized</td></tr>
-<tr><td>Login button is clicked</td></tr>
-<tr><td>Email Id is entered</td></tr>
-<tr><td>Entered password</td></tr>
-<tr><td>clicked on Login button</td></tr>
-<tr><td>Successfully logged out of the browser</td></tr>
-<tr><td>Browser is closed</td></tr>
-<tr><td>Browser Name from the TestNG.xml is :Chrome</td></tr>
-<tr><td>Website is loaded</td></tr>
-<tr><td>Browser window maximized</td></tr>
-<tr><td>Login button is clicked</td></tr>
-<tr><td>Email Id is entered</td></tr>
-<tr><td>Entered password</td></tr>
-<tr><td>clicked on Login button</td></tr>
-<tr><td>Successfully logged out of the browser</td></tr>
-<tr><td>Browser is closed</td></tr>
+<tr><td>Airbnb website is loaded</td></tr>
+<tr><td>Browser window is maximized</td></tr>
+<tr><td>Accept cookies button is clicked</td></tr>
+<tr><td>Location is clicked </td></tr>
+<tr><td>I’m flexible button is clicked</td></tr>
+<tr><td>Search results are displayed</td></tr>
+<tr><td>Guests dropdown is clicked</td></tr>
+<tr><td>Number of adults selected from filter : 2</td></tr>
+<tr><td>Save button is clicked</td></tr>
+<tr><td>Filters button is clicked</td></tr>
+<tr><td>Employee details page is displayed</td></tr>
+<tr><td>Entire place checkbox is selected</td></tr>
+<tr><td>Hotel room checkbox is selected</td></tr>
+<tr><td>Airbnb switch is already disabled</td></tr>
+<tr><td>Final Actual max price is :34708</td></tr>
+<tr><td>Final actual min price is 3718</td></tr>
+<tr><td>Number of bedrooms set to one</td></tr>
+<tr><td>Show listings button is clicked</td></tr>
 </table>
